--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Real time web chat",
     "dependencies": {
         "bootstrap": "^4.1.2",
+        "cool-ascii-faces": "^1.3.4",
         "express": "latest",
         "jade": "latest",
         "jade-bootstrap": "^1.0.14",
